--- a/src/index.html
+++ b/src/index.html
@@ -34,17 +34,17 @@
         <h1 class="h-primary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="/Services/noah-buscher-PSnkh76C-Z8-unsplash.jpg" alt="">
+                <img src="Services/noah-buscher-PSnkh76C-Z8-unsplash.jpg" alt="">
                 <h2 class="h-secondary center">Night Viewing</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti commodi ea. </p>
             </div>
             <div class="box">
-                <img src="/Services/pexels-thirdman-8495473.jpg" alt="">
+                <img src="Services/pexels-thirdman-8495473.jpg" alt="">
                 <h2 class="h-secondary center">Telescope Renting</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti commodi ea. </p>
             </div>
             <div class="box">
-                <img src="/Services/pexels-brenoanp-1136575.jpg" alt="">
+                <img src="Services/pexels-brenoanp-1136575.jpg" alt="">
                 <h2 class="h-secondary center">Virtual Space Reality</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti commodi ea. </p>
             </div>
@@ -98,13 +98,13 @@
         <h1 class="h-primary center">Social Handles</h1>
         <div id="socials">
             <a href="www.instagram.com">
-                <img src="/logo/1024px-Instagram_icon.png" alt="">
+                <img src="logo/1024px-Instagram_icon.png" alt="">
             </a>
             <a href="www.facebook.com">
-                <img src="/logo/Facebook_Logo_(2019).png" alt="">
+                <img src="logo/Facebook_Logo_(2019).png" alt="">
             </a>
             <a href="www.twitter.com">
-                <img src="/logo/Twitter-Logo.jpg" alt="">
+                <img src="logo/Twitter-Logo.jpg" alt="">
             </a>
         </div>
     </section>
